--- a/index.html
+++ b/index.html
@@ -1,390 +1,51 @@
-<!doctype html>
-<html lang="zh-Hant">
-
+<!DOCTYPE html>
+<html lang="zh">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>OpenClaw 管理儀表板</title>
+<meta charset="UTF-8">
+<title>OpenClaw Dashboard</title>
+<script>
+async function loadTasks() {
+  const res = await fetch("tasks.json?ts=" + Date.now());
+  const data = await res.json();
+  const tbody = document.getElementById("task-body");
+  tbody.innerHTML = "";
 
-  <style>
-    :root {
-      --bg: #0b1220;
-      --card: #121a2b;
-      --card2: #172033;
-      --border: #1f2a3d;
-      --text: #e6edf6;
-      --dim: #64748b;
-      --muted: #94a3b8;
-      --blue: #3b82f6;
-      --green: #10b981;
-      --red: #ef4444;
-      --amber: #f59e0b;
-    }
+  data.items.forEach(item => {
+    const tr = document.createElement("tr");
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0
-    }
+    const next = item.next_step && item.next_step.trim() ? item.next_step : "-";
+    const role = item.owner_role && item.owner_role.trim() ? item.owner_role : "-";
+    const block = item.blocked_reason && item.blocked_reason.trim() ? item.blocked_reason : "-";
 
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      font-size: 14px;
-      line-height: 1.6;
-      padding: 24px;
-      min-height: 100vh;
-    }
+    tr.innerHTML = `
+      <td>${item.category}</td>
+      <td>${item.title}</td>
+      <td>${item.status}</td>
+      <td>${next}</td>
+      <td>${role}</td>
+      <td>${block}</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
 
-    .container {
-      max-width: 1200px;
-      margin: 0 auto
-    }
-
-    .hd {
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-      margin-bottom: 22px;
-      padding-bottom: 14px;
-      border-bottom: 1px solid var(--border);
-      gap: 12px;
-    }
-
-    .hd h1 {
-      font-size: 20px;
-      font-weight: 800;
-      letter-spacing: .2px
-    }
-
-    .hd .sub {
-      font-size: 12px;
-      color: var(--dim);
-      margin-top: 6px
-    }
-
-    .live {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      font-size: 12px;
-      font-weight: 700;
-      color: var(--green);
-      white-space: nowrap
-    }
-
-    .dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: var(--green);
-      box-shadow: 0 0 0 3px rgba(16, 185, 129, .15)
-    }
-
-    .kpi-row {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 16px;
-      margin-bottom: 22px;
-    }
-
-    .kpi {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 20px 20px 18px;
-    }
-
-    .kpi .kpi-lbl {
-      font-size: 11px;
-      color: var(--muted);
-      margin-bottom: 6px;
-      letter-spacing: .2px
-    }
-
-    .kpi .kpi-val {
-      font-size: 34px;
-      font-weight: 900;
-      line-height: 1.1
-    }
-
-    .kpi.total .kpi-val {
-      color: var(--blue)
-    }
-
-    .kpi.todo .kpi-val {
-      color: var(--muted)
-    }
-
-    .kpi.doing .kpi-val {
-      color: var(--amber)
-    }
-
-    .kpi.block .kpi-val {
-      color: var(--red)
-    }
-
-    .kpi.ok .kpi-val {
-      color: var(--green)
-    }
-
-    .tw {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      overflow: hidden;
-    }
-
-    .tw-hd {
-      padding: 14px 18px;
-      border-bottom: 1px solid var(--border);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 12px;
-    }
-
-    .tw-hd .title {
-      font-weight: 800
-    }
-
-    .tw-hd .hint {
-      font-size: 12px;
-      color: var(--dim)
-    }
-
-    .table-wrap {
-      overflow: auto
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      min-width: 760px
-    }
-
-    th {
-      padding: 12px 16px;
-      text-align: left;
-      font-size: 11px;
-      color: var(--muted);
-      background: var(--card2);
-      letter-spacing: .2px;
-    }
-
-    td {
-      padding: 14px 16px;
-      border-bottom: 1px solid rgba(31, 42, 61, .9);
-      color: var(--muted);
-      vertical-align: top;
-    }
-
-    td.name {
-      color: var(--text);
-      font-weight: 650
-    }
-
-    .b {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      padding: 4px 10px;
-      border-radius: 999px;
-      font-size: 11px;
-      font-weight: 800;
-      border: 1px solid rgba(255, 255, 255, .06);
-      white-space: nowrap;
-    }
-
-    .b::before {
-      content: "";
-      width: 7px;
-      height: 7px;
-      border-radius: 50%
-    }
-
-    .b-todo {
-      background: rgba(148, 163, 184, .12);
-      color: #cbd5e1
-    }
-
-    .b-todo::before {
-      background: #94a3b8
-    }
-
-    .b-doing {
-      background: rgba(245, 158, 11, .14);
-      color: #fbbf24
-    }
-
-    .b-doing::before {
-      background: #f59e0b
-    }
-
-    .b-ok {
-      background: rgba(16, 185, 129, .14);
-      color: #34d399
-    }
-
-    .b-ok::before {
-      background: #10b981
-    }
-
-    .b-err {
-      background: rgba(239, 68, 68, .14);
-      color: #f87171
-    }
-
-    .b-err::before {
-      background: #ef4444
-    }
-
-    .errbox {
-      margin-top: 16px;
-      background: rgba(239, 68, 68, .08);
-      border: 1px solid rgba(239, 68, 68, .25);
-      color: #fecaca;
-      border-radius: 12px;
-      padding: 12px 14px;
-      font-size: 12px;
-      display: none;
-      white-space: pre-wrap;
-    }
-
-    @media (max-width:560px) {
-      body {
-        padding: 18px
-      }
-
-      .hd {
-        align-items: flex-start;
-        flex-direction: column
-      }
-
-      .kpi-row {
-        grid-template-columns: 1fr
-      }
-
-      table {
-        min-width: 680px
-      }
-    }
-  </style>
+window.onload = loadTasks;
+</script>
 </head>
-
 <body>
-  <div class="container">
-
-    <div class="hd">
-      <div>
-        <h1>OpenClaw 管理儀表板</h1>
-        <div class="sub" id="updated">更新：讀取中…</div>
-      </div>
-      <div class="live">
-        <div class="dot"></div>LIVE
-      </div>
-    </div>
-
-    <div class="kpi-row">
-      <div class="kpi total">
-        <div class="kpi-lbl">總任務</div>
-        <div class="kpi-val" id="k_total">–</div>
-      </div>
-      <div class="kpi todo">
-        <div class="kpi-lbl">待處理</div>
-        <div class="kpi-val" id="k_todo">–</div>
-      </div>
-      <div class="kpi doing">
-        <div class="kpi-lbl">進行中</div>
-        <div class="kpi-val" id="k_doing">–</div>
-      </div>
-      <div class="kpi block">
-        <div class="kpi-lbl">阻塞</div>
-        <div class="kpi-val" id="k_block">–</div>
-      </div>
-      <div class="kpi ok">
-        <div class="kpi-lbl">已完成</div>
-        <div class="kpi-val" id="k_ok">–</div>
-      </div>
-    </div>
-
-    <div class="tw">
-      <div class="tw-hd">
-        <div class="title">任務列表</div>
-        <div class="hint">資料來源：tasks.json</div>
-      </div>
-      <div class="table-wrap">
-        <table>
-          <thead>
-            <tr>
-              <th>類別</th>
-              <th>任務</th>
-              <th>狀態</th>
-              <th>下一步</th>
-              <th>角色</th>
-              <th>阻塞原因</th>
-            </tr>
-          </thead>
-          <tbody id="rows"></tbody>
-        </table>
-      </div>
-    </div>
-
-    <div class="errbox" id="errbox"></div>
-
-  </div>
-
-  <script>
-    (() => {
-      const $ = (id) => document.getElementById(id);
-      const badgeClass = (s) =>
-        s === '阻塞' ? 'b-err' :
-          s === '已完成' ? 'b-ok' :
-            s === '進行中' ? 'b-doing' :
-              'b-todo';
-
-      fetch('./tasks.json', { cache: 'no-store' })
-        .then(r => { if (!r.ok) throw new Error('HTTP ' + r.status); return r.json(); })
-        .then(data => {
-          const items = Array.isArray(data.items) ? data.items : [];
-          $('updated').textContent = '更新：' + (data.updated_at || '—');
-
-          const total = items.length;
-          const todo = items.filter(x => x.status === '待處理').length;
-          const doing = items.filter(x => x.status === '進行中').length;
-          const block = items.filter(x => x.status === '阻塞').length;
-          const ok = items.filter(x => x.status === '已完成').length;
-
-          $('k_total').textContent = total;
-          $('k_todo').textContent = todo;
-          $('k_doing').textContent = doing;
-          $('k_block').textContent = block;
-          $('k_ok').textContent = ok;
-
-          $('rows').innerHTML = items.map(x => `
-        <tr>
-          <td>${x.category || '-'}</td>
-          <td class="name">${x.title || '-'}</td>
-          <td><span class="b ${badgeClass(x.status)}">${x.status || '-'}</span></td>
-          <td>${x.next_action || '-'}</td>
-          <td>${x.role || '-'}</td>
-          <td>${x.block_reason || '-'}</td>
-        </tr>
-      `).join('');
-        })
-        .catch(err => {
-          $('updated').textContent = '更新：讀取失敗';
-          const box = $('errbox');
-          box.style.display = 'block';
-          box.textContent =
-            '無法讀取 ./tasks.json\\n' +
-            '請確認：dashboard.html 與 tasks.json 在同一資料夾，且 JSON 格式正確。\\n' +
-            '錯誤：' + (err && err.message ? err.message : String(err));
-        });
-    })();
-  </script>
-
+<h2>任務列表</h2>
+<table border="1" width="100%">
+<thead>
+<tr>
+<th>類別</th>
+<th>任務</th>
+<th>狀態</th>
+<th>下一步</th>
+<th>角色</th>
+<th>阻塞原因</th>
+</tr>
+</thead>
+<tbody id="task-body"></tbody>
+</table>
 </body>
-
 </html>
