加深說明文字顏色 --dim #666666

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 :root{
   --bg:#F1F1EF;--bg2:#F8F8F7;--bg3:#E8E8E6;
   --panel:#FFFFFF;--border:#E2E2DE;--border2:#C8C8C4;
-  --text:#242422;--dim:#8C8C88;--muted:#B4B4B0;
+  --text:#242422;--dim:#666666;--muted:#B4B4B0;
   --bright:#0C0C0A;
   --urgent-bg:#FBF5EE;--urgent-bd:#DDB87A;
   --blocked-bg:#F9F2FC;--blocked-bd:#C090D8;
