--- a/personal/index.html
+++ b/personal/index.html
@@ -10,7 +10,7 @@
 :root{
   --bg:#F1F1EF;--bg2:#F8F8F7;--bg3:#E8E8E6;
   --panel:#FFFFFF;--border:#E2E2DE;--border2:#C8C8C4;
-  --text:#242422;--dim:#8C8C88;--muted:#B4B4B0;
+  --text:#242422;--dim:#666666;--muted:#B4B4B0;
   --bright:#0C0C0A;
   --green:#1A7A4A;--green-bg:#EEF7F2;--green-bd:#A0D4B8;
   --red:#A02020;--red-bg:#FDF2F2;--red-bd:#E0A8A8;
