--- a/index.html
+++ b/index.html
@@ -199,6 +199,26 @@ main{max-width:880px;margin:0 auto;padding:24px;display:flex;flex-direction:colu
 .t-status.done{color:var(--muted)}
 .t-due{font-size:10px;color:var(--muted);white-space:nowrap}
 .acc-empty{padding:14px 18px;font-size:11px;color:var(--muted)}
+/* personal spending summary in accordion */
+.pfin-summary{
+  display:flex;gap:0;border-top:2px solid var(--border);
+  background:var(--bg2);
+}
+.pfin-col{flex:1;padding:10px 12px;text-align:center}
+.pfin-col+.pfin-col{border-left:1px solid var(--border)}
+.pfin-lbl{font-size:9px;color:var(--muted);letter-spacing:.5px;text-transform:uppercase;margin-bottom:3px}
+.pfin-val{font-size:14px;font-weight:700;font-family:monospace}
+.pfin-val.inc{color:#1A7A4A}
+.pfin-val.exp{color:#A02020}
+.pfin-val.pos{color:#1A7A4A}
+.pfin-val.neg{color:#A02020}
+.pfin-val.dim{color:var(--dim)}
+.pfin-tx{padding:0 14px 10px;font-size:11px;color:var(--dim)}
+.pfin-tx-row{display:flex;gap:8px;padding:4px 0;border-bottom:1px solid var(--border)}
+.pfin-tx-row:last-child{border-bottom:none}
+.pfin-tx-date{color:var(--muted);flex-shrink:0;min-width:40px}
+.pfin-tx-item{flex:1;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.pfin-tx-amt{font-family:monospace;font-weight:600;flex-shrink:0}
 
 /* responsive — tablet */
 @media(max-width:1024px){
@@ -227,6 +247,9 @@ main{max-width:880px;margin:0 auto;padding:24px;display:flex;flex-direction:colu
   .t-pri,.t-type,.t-status{font-size:14px;padding:3px 10px}
   .t-due{font-size:15px}
   .acc-empty{font-size:16px}
+  .pfin-val{font-size:16px}
+  .pfin-lbl{font-size:11px}
+  .pfin-tx{font-size:13px}
   .ov-ttl{max-width:none}
 }
 /* responsive — phone */
@@ -317,6 +340,7 @@ const AREAS = [
 ];
 
 const DATA = {};
+let PFIN = null; // personal finance.json cache
 const PRI_LBL  = {urgent:"急件",important:"重要",normal:"一般"};
 const TYPE_LBL = {remittance:"💳 匯款",alert:"🔔 提醒",task:"任務"};
 
@@ -548,10 +572,43 @@ function sortTasks(ts){
 
 function renderAccordions(){
   const wrap=document.getElementById("acc-wrap");
+  // 個人財務 30天摘要
+  function buildPfinBlock(){
+    if(!PFIN) return "";
+    const today = new Date(); today.setHours(0,0,0,0);
+    const cutoff = new Date(today.getTime() - 30*24*60*60*1000);
+    const WDAY = ["日","一","二","三","四","五","六"];
+    const txs = (PFIN.transactions||[])
+      .filter(t=>new Date(t.date)>=cutoff)
+      .sort((a,b)=>b.date>a.date?1:b.date<a.date?-1:0);
+    let inc=0, exp=0;
+    txs.forEach(t=>{inc+=(t.income||0);exp+=(t.expense||0);});
+    const net=inc-exp;
+    const fmt=n=>n.toLocaleString("zh-TW");
+    const recent=txs.slice(0,4).map(t=>{
+      const d=new Date(t.date);
+      const isInc=t.income>0;
+      return `<div class="pfin-tx-row">
+        <span class="pfin-tx-date">${t.date.slice(5)} ${WDAY[d.getDay()]}</span>
+        <span class="pfin-tx-item">${t.item}</span>
+        <span class="pfin-tx-amt" style="color:${isInc?"#1A7A4A":"#A02020"}">${isInc?"+":"−"}${fmt(isInc?t.income:t.expense)}</span>
+      </div>`;
+    }).join("");
+    return `
+      <div class="pfin-summary">
+        <div class="pfin-col"><div class="pfin-lbl">30天收入</div><div class="pfin-val inc">+${fmt(inc)}</div></div>
+        <div class="pfin-col"><div class="pfin-lbl">30天支出</div><div class="pfin-val exp">-${fmt(exp)}</div></div>
+        <div class="pfin-col"><div class="pfin-lbl">淨額</div><div class="pfin-val ${net>=0?"pos":"neg"}">${net>=0?"+":""}${fmt(net)}</div></div>
+        <div class="pfin-col"><div class="pfin-lbl">筆數</div><div class="pfin-val dim">${txs.length}</div></div>
+      </div>
+      <div class="pfin-tx">${recent}</div>`;
+  }
+
   wrap.innerHTML=AREAS.map(area=>{
     const d=DATA[area.key]; const tasks=sortTasks(d?.tasks||[]);
     const c=counts(tasks);
     const hot=c.blocked>0;
+    const isPersonal = area.key==="personal";
 
     const rows=tasks.length ? tasks.map(t=>`
       <tr>
@@ -580,6 +637,7 @@ function renderAccordions(){
       </div>
       <div class="acc-body" id="acc-body-${area.key}">
         <table class="acc-tbl"><tbody>${rows}</tbody></table>
+        ${isPersonal ? buildPfinBlock() : ""}
       </div>
     </div>`;
   }).join("");
@@ -595,8 +653,12 @@ async function loadArea(area){
 }
 
 async function init(){
-  const results=await Promise.all(AREAS.map(loadArea));
+  const [results, finRes] = await Promise.all([
+    Promise.all(AREAS.map(loadArea)),
+    fetch("data/personal/finance.json?_="+Date.now()).then(r=>r.ok?r.json():null).catch(()=>null)
+  ]);
   AREAS.forEach((a,i)=>{ DATA[a.key]=results[i]||{updated_at:null,tasks:[]}; });
+  PFIN = finRes;
   renderStrip();
   renderWarnings();
   renderBrief();
