正值顏色強制改黑 #000000

--- a/personal/index.html
+++ b/personal/index.html
@@ -116,9 +116,9 @@ main{max-width:880px;margin:0 auto;padding:22px 24px;display:flex;flex-direction
 .tx-sum-item+.tx-sum-item{border-left:1px solid var(--border)}
 .tx-sum-lbl{font-size:9px;color:var(--muted);letter-spacing:.5px;text-transform:uppercase;margin-bottom:4px}
 .tx-sum-val{font-size:15px;font-weight:700;font-family:monospace}
-.tx-sum-val.income{color:var(--bright)}
+.tx-sum-val.income{color:#000000}
 .tx-sum-val.expense{color:var(--red)}
-.tx-sum-val.pos{color:var(--bright)}
+.tx-sum-val.pos{color:#000000}
 .tx-sum-val.neg{color:var(--red)}
 .tx-sum-val.neutral{color:var(--dim)}
 /* transaction rows */
@@ -130,7 +130,7 @@ main{max-width:880px;margin:0 auto;padding:22px 24px;display:flex;flex-direction
 .tx-item{flex:1;color:var(--text);min-width:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .tx-note{font-size:10px;color:var(--muted);flex-shrink:0;max-width:90px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .tx-amount{font-family:monospace;font-weight:600;flex-shrink:0}
-.tx-amount.tx-income{color:var(--bright)}
+.tx-amount.tx-income{color:#000000}
 .tx-amount.tx-expense{color:var(--red)}
 
 /* responsive */
